@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-27T01:18:13Z",
-  "count_outdated" : 2018,
-  "uniques_outdated" : 1256,
-  "count" : 2025,
-  "uniques" : 1263,
+  "timestamp" : "2025-12-29T01:26:15Z",
+  "count_outdated" : 2020,
+  "uniques_outdated" : 1258,
+  "count" : 2027,
+  "uniques" : 1265,
   "clones" : [
-    {
-      "timestamp": "2025-12-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-12-15T00:00:00Z",
       "count": 1,
@@ -43,6 +34,15 @@
     },
     {
       "timestamp": "2025-12-25T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-12-28T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
