@@ -1,12 +1,7 @@
 {
   "count": 7,
-  "uniques": 7,
+  "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2025-12-14T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-12-15T00:00:00Z",
       "count": 1,
@@ -24,6 +19,11 @@
     },
     {
       "timestamp": "2025-12-25T00:00:00Z",
+      "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-12-28T00:00:00Z",
       "count": 2,
       "uniques": 2
     }
